// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should render with props passed in 1`] = `
<div>
  <div
    className="row message read "
  >
    <div
      className="col-xs-1"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <input
            checked={false}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="col-xs-2"
        >
          <i
            className="star fa fa-star"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="col-xs-11"
    >
      <span
        className="label label-warning"
      >
        dev
      </span>
      <span
        className="label label-warning"
      >
        personal
      </span>
      <Link
        replace={false}
        to="/messages/1"
      >
        Hi
      </Link>
    </div>
  </div>
  <Connect(MessageBody)
    messageId={1}
  />
</div>
`;

exports[`Message should render without any props defined 1`] = `
<div>
  <div
    className="row message unread "
  >
    <div
      className="col-xs-1"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <input
            checked={false}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="col-xs-2"
        >
          <i
            className="star fa fa-star-o"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="col-xs-11"
    >
      <Link
        replace={false}
        to="/messages/undefined"
      />
    </div>
  </div>
</div>
`;

exports[`Message simulate star clicked 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <div
        className="row message unread "
    >
        <div
            className="col-xs-1"
        >
            <div
                className="row"
            >
                <div
                    className="col-xs-2"
                >
                    <input
                        checked={false}
                        onChange={[Function]}
                        type="checkbox"
                    />
                </div>
                <div
                    className="col-xs-2"
                >
                    <i
                        className="star fa fa-star-o"
                        onClick={[Function]}
                    />
                </div>
            </div>
        </div>
        <div
            className="col-xs-11"
        >
            <Link
                replace={false}
                to="/messages/undefined"
            />
        </div>
    </div>
</div>,
  "nodes": Array [
    <div>
      <div
            className="row message unread "
      >
            <div
                  className="col-xs-1"
            >
                  <div
                        className="row"
                  >
                        <div
                              className="col-xs-2"
                        >
                              <input
                                    checked={false}
                                    onChange={[Function]}
                                    type="checkbox"
                              />
                        </div>
                        <div
                              className="col-xs-2"
                        >
                              <i
                                    className="star fa fa-star-o"
                                    onClick={[Function]}
                              />
                        </div>
                  </div>
            </div>
            <div
                  className="col-xs-11"
            >
                  <Link
                        replace={false}
                        to="/messages/undefined"
                  />
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Message
        match={
                Object {
                        "params": Object {
                          "id": 1,
                        },
                      }
        }
        message={
                Object {
                        "labels": Array [],
                      }
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Message {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "match": Object {
            "params": Object {
              "id": 1,
            },
          },
          "message": Object {
            "labels": Array [],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <div
                    className="row message unread "
          >
                    <div
                              className="col-xs-1"
                    >
                              <div
                                        className="row"
                              >
                                        <div
                                                  className="col-xs-2"
                                        >
                                                  <input
                                                            checked={false}
                                                            onChange={[Function]}
                                                            type="checkbox"
                                                  />
                                        </div>
                                        <div
                                                  className="col-xs-2"
                                        >
                                                  <i
                                                            className="star fa fa-star-o"
                                                            onClick={[Function]}
                                                  />
                                        </div>
                              </div>
                    </div>
                    <div
                              className="col-xs-11"
                    >
                              <Link
                                        replace={false}
                                        to="/messages/undefined"
                              />
                    </div>
          </div>
</div>,
        "_debugID": 6,
        "_renderedOutput": <div>
          <div
                    className="row message unread "
          >
                    <div
                              className="col-xs-1"
                    >
                              <div
                                        className="row"
                              >
                                        <div
                                                  className="col-xs-2"
                                        >
                                                  <input
                                                            checked={false}
                                                            onChange={[Function]}
                                                            type="checkbox"
                                                  />
                                        </div>
                                        <div
                                                  className="col-xs-2"
                                        >
                                                  <i
                                                            className="star fa fa-star-o"
                                                            onClick={[Function]}
                                                  />
                                        </div>
                              </div>
                    </div>
                    <div
                              className="col-xs-11"
                    >
                              <Link
                                        replace={false}
                                        to="/messages/undefined"
                              />
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Message
    match={
        Object {
            "params": Object {
              "id": 1,
            },
          }
    }
    message={
        Object {
            "labels": Array [],
          }
    }
/>,
}
`;
